👌(blogpost) fix glimpse variant "mini"
We don't want every categories to display in variant mini, instead we
apply an overflow so the category list is truncated.

This is a simple CSS fix in Sass source.

--- a/src/frontend/scss/objects/_blogpost_glimpses.scss
+++ b/src/frontend/scss/objects/_blogpost_glimpses.scss
@@ -205,6 +205,7 @@ $glimpse-gutter: 1.25rem;
     #{$glimpse-item-selector}__content {
       @include sv-flex(1, 1, auto);
       padding-left: 0.5rem;
+      overflow: hidden;
     }
 
     #{$glimpse-item-selector}__wrapper {
@@ -218,6 +219,10 @@ $glimpse-gutter: 1.25rem;
         top: 0.6rem;
         width: 1.5rem;
       }
+    }
+
+    #{$glimpse-item-selector}__categories {
+        display: flex;
     }
 
     #{$glimpse-item-selector}__title {
